# heat-translator

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  heat_translator.py  lower-constraints.txt  requirements.txt  run_py27-tosca-parser-master.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
contrib/hot/: tosca_collectd.py  tosca_logstash.py  tosca_nodejs.py  tosca_paypalpizzastore.py  tosca_rsyslog.py  tosca_wordpress.py
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/contributor/: contributing.rst
samples/tests/data/: test_host_assignment.yaml  test_tosca_custom_type.yaml  test_tosca_flavor_and_image.yaml  test_tosca_get_functions_semantic.yaml  test_tosca_unsupported_type.yaml  tosca_exchange_public_ssh_key.yaml  tosca_single_instance_wordpress.yaml  tosca_single_instance_wordpress_with_url_import.yaml  tosca_single_server.yaml  tosca_single_server_with_defaults.yaml  tosca_software_component_multiple_hosts.yaml
translator/: shell.py
translator/common/: exception.py  flavors.py  images.py  utils.py
translator/conf/: __init__.py  config.py  heat_translator_logging.conf  translator.conf
translator/container/docker/: dockerfile
translator/custom/hot/: tosca_elasticsearch.py  tosca_kibana.py
translator/hot/: tosca_translator.py  translate_inputs.py  translate_node_templates.py  translate_outputs.py
translator/hot/syntax/: hot_output.py  hot_parameter.py  hot_resource.py  hot_template.py
translator/hot/tests/: test_hot_parameter.py  test_translate_inputs.py  test_translate_outputs.py
translator/hot/tosca/: tosca_block_storage.py  tosca_block_storage_attachment.py  tosca_cluster_policies_scaling.py  tosca_compute.py  tosca_database.py  tosca_dbms.py  tosca_floating.py  tosca_network_network.py  tosca_network_port.py  tosca_object_storage.py  tosca_policies.py  tosca_policies_monitoring.py  tosca_policies_reservation.py  tosca_policies_scaling.py  tosca_software_component.py  tosca_web_application.py  tosca_webserver.py
translator/osc/v1/: translate.py
translator/tests/: test_conf.py  test_etsi_tosca_hot_translation.py  test_shell.py  test_template.py  test_tosca_hot_translation.py  test_translate_node_template.py  test_utils.py  utils.py
translator/tests/data/: test_single_server_without_optional_version_prop.yaml  test_tosca_artifact.yaml  test_tosca_custom_type.yaml  test_tosca_custom_type_with_override.yaml  test_tosca_flavor_and_image.yaml  test_tosca_get_functions_semantic.yaml  test_tosca_nfv_sample.yaml  test_tosca_script_types.yaml  tosca_autoscaling.yaml  tosca_cluster_autoscaling.yaml  tosca_elk.yaml  tosca_helloworld_invalid.yaml  (+2 more)
(+172 files in other folders)
