[metadata]
name = heat-translator
summary = Tool to translate non-heat templates to Heat Orchestration Template.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://docs.openstack.org/heat-translator/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    translator
package_data =
    conf = conf/*.conf

[entry_points]
openstack.cli.extension =
    translator = translator.osc.osc_plugin

openstack.translator.v1 =
    translate_template = translator.osc.v1.translate:TranslateTemplate

console_scripts =
    heat-translator = translator.shell:main

[compile_catalog]
directory = translator/locale
domain = translator

[update_catalog]
domain = translator
output_dir = translator/locale
input_file = translator/locale/translator.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = translator/locale/translator.pot
