[metadata]
name = heat-translator
description = Tool to translate non-heat templates to Heat Orchestration Template.
long_description = file: README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
url = http://docs.openstack.org/heat-translator/
python_requires = >=3.6
classifiers =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    translator
package_data =
    conf = conf/*.conf

[entry_points]
openstack.cli.extension =
    translator = translator.osc.osc_plugin

openstack.translator.v1 =
    translate_template = translator.osc.v1.translate:TranslateTemplate

console_scripts =
    heat-translator = translator.shell:main
